Modificando Lista de citas por ID Medico